[package]
name = "pz_custom_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serenity = "0.12.0"
poise = "0.6.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.113"
serde = "1.0.196"
# rcon-rs = "0.1.0"
rcon = { version = "0.6.0", features = [ "rt-tokio", "rt-async-std" ] }
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
futures = "0.3.30"
